# fullstack-ai-platform

./: .env.compose  .gitignore  .pre-commit-config.yaml  CD_PRODUCTION.md  CD_STAGING.md  DOCKER_COMPOSE.md  README.md  docker-compose.yml
backend-python/: .dockerignore  .env.example  .env.required  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend-python/.eval/: eval-report.json
backend-python/alembic/: env.py
backend-python/alembic/versions/: 0001_init_chat_persistence.py  0002_documents_and_chunks.py  0003_pgvector_embeddings.py
backend-python/app/: main.py
backend-python/app/ai/: deps.py
backend-python/app/core/: caller.py  config.py  logging.py  retry.py  security.py  text_utils.py
backend-python/app/db/: base.py  chat.py  deps.py  documents.py  engine.py  identity.py  models.py  seed.py  session.py  usage.py
backend-python/app/providers/: anthropic_provider.py  base.py  capabilities.py  factory.py  gemini_provider.py  groq_provider.py  openai_provider.py
backend-python/app/routers/: auth.py  chat.py  health.py  rag.py
backend-python/app/schemas/: auth.py  chat.py  rag.py
backend-python/app/services/: auth_service.py  chat_service.py  document_service.py  knowledge_service.py  quota_service.py  tool_chat_service.py  usage_service.py  (+1 more)
backend-python/tests/: conftest.py  fakes.py  provider_error_assertions.py  test_ai_settings.py  test_auth.py  test_chat_endpoint.py  test_chat_persistence.py  test_chat_sessions.py  test_chat_stream.py  test_context_builder.py  test_document_chunker.py  test_document_parsers.py  test_document_pipeline.py  test_document_service.py  test_evaluation_cli.py  test_evaluation_datasets.py  test_evaluation_metrics.py  test_evaluation_runners.py  test_guest_output_token_cap.py  test_guest_quota.py  test_health.py  test_knowledge_service.py  test_logging.py  test_persistence.py  test_phase4_chat_tools.py  test_prompt_builder.py  test_prompt_manager.py  test_rag_api.py  test_rag_service.py  test_retriever.py  test_session_titles.py  test_summarization_and_linking.py  test_tool_chat_service.py  test_unified_chat.py  test_usage.py  test_vector_store.py  test_web_search_tool.py
backend/python/: Makefile  README.md  pyproject.toml
(+262 files in other folders)
