[project]
name = "python-ai-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.139.0",
    "google-auth>=2.35.0",
    "google-genai>=2.11.0",
    "groq>=0.38.0",
    "anthropic>=0.72.0",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.15.21",
]
