[project]
name = "python-ai-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.139.0",
    "google-auth>=2.35.0",
    "google-genai>=2.11.0",
    "groq>=0.38.0",
    "jinja2>=3.1.6",
    "anthropic>=0.72.0",
    "openai>=2.45.0",
    "pgvector>=0.3.6",
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.411",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/seed.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
