[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.15.21",
]
